<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pinasystems.servicebasketv2.AccountActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/title"
        android:id="@+id/title"/>

    <ScrollView
        android:id="@+id/details_form"
        android:layout_below="@+id/title"
        android:layout_above="@+id/adView"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/provider_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/namefield">

        <AutoCompleteTextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/remainder">

            <AutoCompleteTextView
                android:id="@+id/finalinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Do you also provide service?"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="normal"
        android:textColor="@color/colorAccent"
        android:id="@+id/textView"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_yes"
            android:textColor="@color/colorButton"
            android:id="@+id/radioButton8"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_no"
            android:id="@+id/radioButton9"
            android:textColor="@color/colorButton"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tandc"
        android:id="@+id/tandc"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tandc_link"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:textColor="#0000EE"
            android:textColorLink="#551A8B"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:textAppearanceSmall"
        android:text="Next"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:id="@+id/buttonsubmit"
        android:textStyle="bold"
        android:layout_below="@+id/tandc"
        android:layout_marginTop="10dp"/>

    </LinearLayout>
    </ScrollView>
    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>
