<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterProviderActivity">
    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/details_form"
        android:layout_above="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/provider_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="fill">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_account"
                android:textAlignment="center"
                android:textSize="@dimen/title"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:id="@+id/title"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category:"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                style="?android:textAppearanceMedium"
                android:layout_marginTop="20dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/spinner"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                style="@style/spinner_style" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sub-Category"
                android:textColor="@color/colorWhite"
                android:background="@color/colorButton"
                android:id="@+id/buttonsubcategory"
                style="?android:textAppearanceSmall"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selected sub-categories are:"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:id="@+id/textviewsubcategory"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Address Details"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/postaladdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Postal Address"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/postaladdress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Line 2"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="City"
                    android:inputType="textAutoComplete|textCapWords"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="State"
                    android:inputType="textAutoComplete|textCapWords"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Pincode"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/provider_details_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/action_submit"
                android:textStyle="bold"
                android:background="@color/colorButton"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
    </ScrollView>
    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>
